fixes underlined heading spacing on blocks with bg-color

--- a/source/_patterns/01-atoms/text/asides/_aside.scss
+++ b/source/_patterns/01-atoms/text/asides/_aside.scss
@@ -16,6 +16,12 @@ aside,
   &.lightest-blue-bg {
     padding: $double-spacing;
 
+    &.underlined-headings {
+      .block__title {
+        padding-bottom: $standard-spacing * 1.5;
+      }
+    }
+
     .block__title {
       margin-top: 0;
       padding-bottom: 0;
